test/implicitDup23_3.slq

def main(){
	x := H(0);
	y := dup(x);
	z := y;
	if y {}
	x := H(x);
	t := y; /// error
	return (x,t);
}
